jdk21 examples