@@ -1,1 +1,7 @@
 # jdk-latest-app
+# I capture all the latest java features in a respective package
+
+- How to run code? your cmd shell from windows/linux - in a single line below command
+- Widnows OS i used and tested as intellj did not support jdk21
+- PS D:\Intellij_WS\jdk-latest-app> D:\jdk-21\bin\java  --source 21 --enable-preview 
+D:\Intellij_WS\jdk-latest-app\src\main\java\com\narayana\jdk21\Main.java    
